# personal-site

./: .gitignore  .gitmodules  CNAME  Cargo.toml  _headers  build_release.sh  build_tailwind.sh  index.html  package-lock.json  package.json  robots.txt  run_dev.sh  sitemap.txt  tailwind.config.js
.github/workflows/: rust.yml  tailwind.yml
assets/css/: colorPalette.css  tailwind.css
src/: localization.rs  main.rs  router.rs  theme.rs
src/components/: color_theme_picker.rs  content_education.rs  content_experience.rs  content_item.rs  content_teaching.rs  footer.rs  header.rs  icon_badges.rs  language_switcher.rs  logo.rs  mod.rs  project.rs  quotes.rs  tags.rs  typewriter.rs
src/content/de/: intro.md  more.md  quotes.yaml  tags.yaml
src/content/de/education/: 2019-06-01_OPG-Pullach.md  2019-10-01_RWTH-Aachen.md  2022_01_01_Coursera.md  2022_09-01_RWTH-Aachen.md  2023_12_01_UIS.md  2024_09-01_RWTH-Aachen.md
src/content/de/experience/: 2023-03-01_HiWi.md  2024-02-14_itestra.md  2024-10-01_tngtech.md
src/content/de/projects/: 2020-03-01_FlappyKing.md  2021-02-01_SimpleChat.md  2021-10-12_OceanCurrents.md  2023-03-10_FractalRust.md  2023-11-01_EIUIE.md  2023-11-17_py_css.md  2025-12-01_wordle-rs.md
src/content/de/teaching/: 2020-10-01_HiWi.md  2021-03-01_HiWi.md  2023-03-01_HiWi.md
src/content/en/: intro.md  more.md  quotes.yaml  tags.yaml
src/content/en/education/: 2011-10-01_OPG-Pullach.md  2019-10-01_RWTH-Aachen.md  2022-10-01_RWTH-Aachen.md  2022_01_01_Coursera.md  2022_09-01_RWTH-Aachen.md  2023_12_01_UIS.md  2024_09-01_RWTH-Aachen.md
src/content/en/experience/: 2023-03-01_HiWi.md  2024-02-14_itestra.md  2024-10-01_tngtech.md
src/content/en/projects/: 2020-03-01_FlappyKing.md  2021-02-01_SimpleChat.md  2021-10-12_OceanCurrents.md  2023-03-10_FractalRust.md  2023-11-01_EIUIE.md  2023-11-17_py_css.md  2025-12-01_wordle-rs.md
src/content/en/teaching/: 2021-03-01_HiWi.md  2022-03-01_HiWi.md  2023-03-01_HiWi.md
src/layouts/: base.rs
src/pages/: home.rs  mod.rs  page_not_found.rs
src/pages/home/: index.rs
src/pages/projects/: eiuie.rs  flappyking.rs  fractal.rs  mod.rs  oceancurrents.rs  py_css.rs  simplechat.rs  wordle_rs.rs
src/public/project_code/fractal/: Readme.md  fractal_rust-90e1cbafa6dae3d2.js  fractal_rust-90e1cbafa6dae3d2_bg.wasm  index.html
src/public/project_code/fractal_rust/: Readme.md
styles/: main.css
