[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.16.0"
gloo-utils = "0.1.6"
once_cell = "1.17.1"
serde = "1.0.152"
stylist = { version = "0.12.0", features = ["yew_integration", "parser"] }
yaml-front-matter = "0.1.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
