[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = "0.43.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
gloo = "0.11.0"
gloo-utils = "0.2.0"
include_dir = "0.7.4"
once_cell = "1.21.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
stylist = { version = "0.13.0", features = ["yew_integration", "parser"] }
web-sys = { version = "0.3.81", features = ["ScrollToOptions", "Window"] }
yaml-front-matter = "0.1.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
